Total$ in Cart Done

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -257,6 +257,26 @@ button {
   }
 }
 
+/*Cart $ Total*/
+
+.hide {
+  display: none;
+}
+
+.cart-footer {
+  margin-top: 1rem;
+  padding-top: 1rem;
+  border-top: 1px solid #ccc;
+  font-weight: bold;
+  text-align: right;
+}
+
+.cart-total {
+  font-size: 1.2rem;
+}
+
+/*Cart $ Total END*/
+
 footer {
   font-size: var(--small-font);
   padding: 1em;
