--- a/src/css/style.css
+++ b/src/css/style.css
@@ -210,6 +210,7 @@ button {
   font-size: var(--small-font);
   /* max-height: 120px; */
   align-items: center;
+  position: relative;
 }
 
 .cart-card__image {
@@ -240,6 +241,25 @@ button {
   grid-row: 2;
   grid-column: 3;
 }
+
+/* Cart item remove button */
+.cart-card__remove {
+  cursor: pointer;
+  font-size: 1rem;
+  width: fit-content;
+  position: absolute;
+  border-radius: 5px;
+  padding: 0.05em;
+  margin: 0.2em;
+  top: 0;
+  left: 0;
+}
+/* End cart item remove button */
+
+
+
+
+
 
 @media screen and (min-width: 500px) {
   body {
